<resources>
    <string name="app_name">Red Cross</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_officer_main">OfficerMainActivity</string>
    <string name="indian_red_cross_society_telangana">Indian Red Cross Society,\n Telangana State Branch</string>
    <string name="indian_red_cross_society_telangana1">Indian Red Cross Society</string>
    <string name="indian_red_cross_society_telangana2">Telangana State Branch</string>
    <string name="tcText1">\u2022 Fee once paid will not be given refund. Candidate should go through the Detailed Notification and ensure the eligibility before making payment.</string>
    <string name="tcText2">When a candidate makes double payment by mistake, refund can be considered only on bringing it to the notice of RED CROSS by mail within 7 days of making such payment. Any kind of requests beyond this 7 days period will not be entertained. The refund process via same source of payments made in such cases will be initiated in Three to Five working days after receiving the refund request in all eligible cases of refund. This clause is applicable only in case of multiple payments by a candidate for the notification.</string>
    <string name="tcText3">During the process of making payment , by any chance the amount is deducted and the same has not reached RED CROSS account is automatically refunded by the Payment gateway provider on bringing the issue to the notice of Payment Gateway service provider.</string>
    <string-array name="financial_years">
        <item>2019–2020</item>
    </string-array>
    <string-array name="financial_month">
        <item>December</item>
        <item>November</item>
    </string-array>
    <string-array name="Membership_type">
        <item>Select Membership Type</item>
        <item>Patron</item>
        <item>Vice Patron</item>
        <item>Life Member</item>
        <item>Life Associate</item>
        <item>Annual Member</item>
        <item>Annual Associate</item>
    </string-array>
    <string-array name="Select_Relation">
        <item>Select Relation</item>
        <item>Wife</item>
        <item>Husband</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Close Relative</item>
        <item>Friend</item>
        <item>Others</item>
    </string-array>
    <string-array name="genders">
        <item>All</item>
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>
    <string-array name="types">
        <item>All</item>
        <item>JRC</item>
        <item>YRC</item>
        <item>Membership</item>
    </string-array>
    <string-array name="blood_groups">
        <item>Select Blood Group</item>
        <item>A +ve</item>
        <item>A -ve</item>
        <item>B +ve</item>
        <item>B -ve</item>
        <item>AB +ve</item>
        <item>AB -ve</item>
        <item>O +ve</item>
        <item>O -ve</item>

    </string-array>
    <string-array name="offcicer_blood_groups">
        <item>All</item>
        <item>A +ve</item>
        <item>A -ve</item>
        <item>B +ve</item>
        <item>B -ve</item>
        <item>AB +ve</item>
        <item>AB -ve</item>
        <item>O +ve</item>
        <item>O -ve</item>

    </string-array>
    <string name="INFO_ABOUT">Inspired by the narration of experiences of war of Solferino by Henry Dunant, the Red Cross Organisation was formed in the year 1864. The first "Geneva Convention" has adopted Red Cross and its emblem for the ameloration of conditions of wounded in the battle field. The nucleus of Indian Red Cross Society which is a part of international movement was formed in the year 1920, through an act of Parliament(Act XV of 1920). The Honorable Governer of Telangana is its President.Red Cross provides assistance to victims of war, Natural Calamities, Disaster, Epidemics without discrimination of race, religion, creed, nationality, political opinions. In addition to it relief activities in emergencies, it promotes and undertakes activities of development and prevention of ill health. disease and preparedness for disasters.Any person can help this international humanitarian effort by donation in cash or kind, and by enrolling as a member and serving voluntarily in any of its activities.</string>
    <string-array name="Education">
        <item>Select Education</item>
        <item>SSC</item>
        <item>Inter</item>
        <item>PG</item>
        <item>Degree</item>
        <item>PHD</item>


    </string-array>
    <string-array name="District">
        <item>Select District</item>


    </string-array>
    <string-array name="Mandal">
        <item>Select Mandal</item>

    </string-array>
    <string-array name="Town_Village">
        <item>Select Town/Village</item>


    </string-array>
    <string-array name="Activities">
        <item>Select Activities interested</item>

    </string-array>
    <string-array name="Married">
        <item>--Select--</item>
        <item>Single</item>
        <item>Married</item>
    </string-array>
    <string-array name="Gender">
        <item>--Select--</item>
        <item>Male</item>
        <item>Female</item>


    </string-array>
    <string-array name="blood_groups_suffix">
        <item>Select Blood Group</item>
        <item>A+Ve</item>
        <item>A-Ve</item>
        <item>B+Ve</item>
        <item>B-Ve</item>
        <item>AB+Ve</item>
        <item>AB-Ve</item>
        <item>O+Ve</item>
        <item>O-Ve</item>
    </string-array>
    <string-array name="select_language">
        <item>Select Language</item>
        <item>English</item>

    </string-array>
    <string-array name="ts_districts">
        <item>Select District</item>
        <item>Adilabad</item>
        <item>Bhadradri Kothagudem</item>
        <item>Hyderabad</item>
        <item>Jagitial</item>
        <item>Jangaon</item>
        <item>Jayashankar</item>
        <item>Jogulamba Gadwal</item>
        <item>Kamareddy</item>
        <item>Karimnagar</item>
        <item>Khammam</item>
        <item>Kumuram Bheem</item>
        <item>Mahabubabad</item>
        <item>Mahabubnagar</item>
        <item>Mancherial</item>
        <item>Medak</item>
        <item>Medchal Malkajgiri</item>
        <item>Nagarkurnool</item>
        <item>Nalgonda</item>
        <item>Nirmal</item>
        <item>Nizamabad</item>
        <item>Peddapalli</item>
        <item>Rajanna Sircilla</item>
        <item>Rangareddy</item>
        <item>Sangareddy</item>
        <item>Siddipet</item>
        <item>Suryapeta</item>
        <item>Vikarabad</item>
        <item>Wanaparthy</item>
        <item>Warangal Rural</item>
        <item>Warangal Urban</item>
        <item>Yadadri Bhuvanagiri</item>
        <item>Narayanpet</item>
        <item>Mulugu</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="loc">Please grant location  permission</string>
    <string name="allow_loc">Please allow location permission</string>
    <string name="loc_sett">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="loc_stopped">Location updates stopped!</string>
    <string name="powered_cgg">Powered by CGG</string>
    <string name="powered_ghmc">Rights Reserved @ RedCross</string>
    <string name="grant_all">Please grant required permissions</string>
    <string name="grant_all_new">As some of the permissions are permanently denied, Please grant the permissions</string>
    <string name="idMemDateformat">dd-MM-yyyy</string>
    <string name="member_id">Member Id</string>
    <string name="member_idaster">Member Id*</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="date_of_birth_without">Date of Birth</string>
    <string name="locate">Locate</string>
    <string name="how_to_become_a_member">How to become a Member</string>
    <string name="become_a_member">Become a Member</string>
    <string name="download_id_card">Download ID Card</string>
    <string name="download_certificate">Download Certificate</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="login">Login</string>
    <string name="membership">Membership</string>
    <string name="trainings">Trainings</string>
    <string name="serv">SERV</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="state_coordinators">State Coordinators</string>
    <string name="get_blood">Get Blood</string>
    <string name="home_nursing">Home Nursing</string>
    <string name="about_us">About us</string>
    <string name="history">History</string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="fundamental_principles">Fundamental Principles</string>
    <string name="about_ircs">About IRCS</string>
    <string name="abstract_of_membership">Abstract of Membership</string>
    <string name="current_trainings">Current Trainings</string>
    <string name="upcoming_trainings">Upcoming Trainings</string>
    <string name="blood_donors">Blood Donors</string>
    <string name="donate">Donate</string>
    <string name="online_donation">Online Donation</string>
    <string name="home_nursing_request">Home Nursing Request</string>
    <string name="become_home_nurse">Become Home Nurse</string>
    <string name="home_nurse_registration">Home Nurse Registration</string>
    <string name="locate_service">Locate Service</string>
    <string name="first_aid_volunteers">First Aid Volunteers</string>
    <string name="contact_us">Contact us</string>
    <string name="district_contacts">District Contacts</string>
    <string name="about_cgg">About CGG</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="change_mpin">Change MPIN</string>
    <string name="exit">Exit</string>
    <string name="dashboard">Dashboard</string>
    <string name="institution_counts">Institution counts</string>
    <string name="reports">Reports</string>
    <string name="day_wise">Day wise</string>
    <string name="mandal_wise">Mandal wise</string>
    <string name="district_wise">District wise</string>
    <string name="govt_vs_pvt">Govt Vs Pvt</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="info">Info</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="mydonations">My Donations</string>
    <string name="my_membership">My Memberships</string>
    <string name="Organogram">Organogram</string>
    <string name="MySubscriptions">My Subscriptions</string>
    <string name="inbox">Inbox</string>
</resources>