<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp">

            <Button
                android:id="@+id/btn_DownloadIDCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/download_id_card"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_DownloadCertificate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/download_certificate"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/enterDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/memberID_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/member_idaster"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/memberID_res"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                        android:inputType="textCapCharacters"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/DOB_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:drawablePadding="10dp"
                        android:padding="@dimen/dp_5"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/DOB_res"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:drawableRight="@android:drawable/ic_menu_my_calendar"
                        android:focusable="false"
                        android:hint="@string/date_of_birth_without"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/downloadIdCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:background="#30000000"
            android:text="@string/download_id_card"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/downloadCertificate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:background="#30000000"
            android:text="@string/download_certificate"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/downloadReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:background="#30000000"
            android:text="@string/download_receipt"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>
</layout>